[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-transcripts"
version = "0.1.0"
description = "Parse and inspect Claude Code session transcripts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[project.scripts]
claude-transcripts = "claude_transcripts.__main__:main"

[project.urls]
Repository = "https://github.com/oneryalcin/claude-transcripts"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_transcripts"]
